# tarot_oracle-

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
pages/: dashboard.py  displacement_detail.py  login.py
src/life_sciences_competitive_intelligence_multi_format_export_automation/: crew.py  main.py  models.py
src/life_sciences_competitive_intelligence_multi_format_export_automation/config/: agents.yaml  tasks.yaml
utils/: charts.py  mock_data.py  pdf_generator.py  persistence.py  styles.py
